# sh-agent-pull-request-master

./: .directive  .env.example  .gitignore  .personality  AGENTS.md  README.md  agent.sh
adapters/: apply-edits.sh  apply-file-changes.sh  detect-validation.sh  git-clone-repo.sh  git-create-branch.sh  git-read-files.sh  github-add-reviewer.sh  github-approve-pr.sh  github-comment-pr.sh  github-commit-changes.sh  github-create-pr.sh  github-get-pr-diff.sh  github-get-pr-reviews.sh  github-get-pr.sh  github-list-prs.sh  github-react-comment.sh  github-update-pr.sh
configs/: models.md
lib/: config.sh  constants.sh  github.sh  humanize.sh  implementation.sh  json.sh  logging.sh  memory.sh  persona.sh  planning.sh  providers.sh  review.sh
personas/: director.md  engineer.md  project-manager.md  researcher.md  technical-writer.md
scripts/: ensure-tools.sh
tools/apply-edits/: Cargo.toml
tools/apply-edits/src/: autocorrect.rs  error.rs  indent.rs  lib.rs  main.rs  matcher.rs  output.rs  read.rs  transaction.rs
tools/apply-edits/src/edits/: delete.rs  file_ops.rs  insert.rs  mod.rs  replace.rs
workflows/: ask-persona-for-review.md  determine-final-review.md  research-solution.md  review-pull-request.md  review-solution.md  verify-with-scope.md  write-code.md
